cmake: generate and install doc for dbus-run-session

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -123,6 +123,7 @@ configure_file(dbus-cleanup-sockets.1.xml.in ${CMAKE_CURRENT_BINARY_DIR}/dbus-cl
 configure_file(dbus-daemon.1.xml.in ${CMAKE_CURRENT_BINARY_DIR}/dbus-daemon.1.xml)
 configure_file(dbus-launch.1.xml.in ${CMAKE_CURRENT_BINARY_DIR}/dbus-launch.1.xml)
 configure_file(dbus-monitor.1.xml.in ${CMAKE_CURRENT_BINARY_DIR}/dbus-monitor.1.xml)
+configure_file(dbus-run-session.1.xml.in ${CMAKE_CURRENT_BINARY_DIR}/dbus-run-session.1.xml)
 configure_file(dbus-send.1.xml.in ${CMAKE_CURRENT_BINARY_DIR}/dbus-send.1.xml)
 configure_file(dbus-test-tool.1.xml.in ${CMAKE_CURRENT_BINARY_DIR}/dbus-test-tool.1.xml)
 configure_file(dbus-update-activation-environment.1.xml.in ${CMAKE_CURRENT_BINARY_DIR}/dbus-update-activation-environment.1.xml)
@@ -130,6 +131,7 @@ configure_file(dbus-uuidgen.1.xml.in ${CMAKE_CURRENT_BINARY_DIR}/dbus-uuidgen.1.
 if(UNIX)
     docbook(${CMAKE_CURRENT_BINARY_DIR}/dbus-daemon.1.xml man)
     docbook(${CMAKE_CURRENT_BINARY_DIR}/dbus-monitor.1.xml man)
+    docbook(${CMAKE_CURRENT_BINARY_DIR}/dbus-run-session.1.xml man)
     docbook(${CMAKE_CURRENT_BINARY_DIR}/dbus-send.1.xml man)
     docbook(${CMAKE_CURRENT_BINARY_DIR}/dbus-test-tool.1.xml man)
     docbook(${CMAKE_CURRENT_BINARY_DIR}/dbus-launch.1.xml man)
@@ -139,6 +141,7 @@ if(UNIX)
 endif()
 docbook(${CMAKE_CURRENT_BINARY_DIR}/dbus-daemon.1.xml html)
 docbook(${CMAKE_CURRENT_BINARY_DIR}/dbus-monitor.1.xml html)
+docbook(${CMAKE_CURRENT_BINARY_DIR}/dbus-run-session.1.xml html)
 docbook(${CMAKE_CURRENT_BINARY_DIR}/dbus-send.1.xml html)
 docbook(${CMAKE_CURRENT_BINARY_DIR}/dbus-test-tool.1.xml html)
 docbook(${CMAKE_CURRENT_BINARY_DIR}/dbus-launch.1.xml html)
