Do not let doxygen build man pages on Windows
This fixes an issue on gitlab CI not been able to create man page
output dir. Also man pages does not make sense on Windows.

--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -127,7 +127,7 @@ RTF_EXTENSIONS_FILE    =
 #---------------------------------------------------------------------------
 # configuration options related to the man page output
 #---------------------------------------------------------------------------
-GENERATE_MAN           = YES
+GENERATE_MAN           = @DBUS_GENERATE_MAN@
 MAN_OUTPUT             = man
 MAN_EXTENSION          = .3dbus
 MAN_LINKS              = YES
