--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -604,6 +604,7 @@ in_data = \
 	data/valid-config-files/max-replies-per-connection.conf.in \
 	data/valid-config-files/multi-user.conf.in \
 	data/valid-config-files/pending-fd-timeout.conf.in \
+	data/valid-config-files/send-destination-prefix-rules.conf.in \
 	data/valid-config-files/systemd-activation.conf.in \
 	data/valid-config-files/tmp-session.conf.in \
 	data/valid-config-files-system/tmp-session-like-system.conf.in \
