--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -688,6 +688,9 @@ static_data = \
 	data/systemd-activation/com.example.ReceiveDenied.service \
 	data/systemd-activation/com.example.SendDenied.service \
 	data/systemd-activation/com.example.SendDeniedByAppArmorName.service \
+	data/systemd-activation/com.example.SendPrefixDenied.service \
+	data/systemd-activation/com.example.SendPrefixDenied.internal.service \
+	data/systemd-activation/com.example.SendPrefixDenied.SendPrefixAllowed.internal.service \
 	data/systemd-activation/com.example.SystemdActivatable1.service \
 	data/systemd-activation/com.example.SystemdActivatable2.service \
 	data/systemd-activation/org.freedesktop.systemd1.service \
