--- a/test/data/valid-config-files/systemd-activation.conf.in
+++ b/test/data/valid-config-files/systemd-activation.conf.in
@@ -14,6 +14,8 @@
 
   <policy context="mandatory">
     <deny send_destination="com.example.SendDenied"/>
+    <deny send_destination_prefix="com.example.SendPrefixDenied"/>
     <deny receive_interface="com.example.ReceiveDenied" receive_member="Call"/>
+    <allow send_destination_prefix="com.example.SendPrefixDenied.SendPrefixAllowed"/>
   </policy>
 </busconfig>
